--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -35,16 +35,15 @@
         app:layout_constraintTop_toBottomOf     = "@+id/textView4"
         app:layout_constraintStart_toStartOf    = "parent"
         app:layout_constraintEnd_toEndOf        = "parent" />
-    <EditText
-        android:id                  = "@+id/editTextEmail"
+    <TextView
+        android:id                  = "@+id/textEmailAccount"
         android:layout_width        = "match_parent"
         android:layout_height       = "wrap_content"
         android:layout_marginTop    = "8dp"
         android:layout_marginStart  = "24dp"
         android:layout_marginEnd    = "24dp"
-        android:ems                 = "10"
-        android:inputType           = "textEmailAddress"
-        android:textSize            = "14sp"
+        android:text                = "Alamat Email"
+        android:textColor           = "@color/black"
         app:layout_constraintStart_toStartOf    = "parent"
         app:layout_constraintEnd_toEndOf        = "parent"
         app:layout_constraintTop_toBottomOf     = "@+id/textView5" />
@@ -58,7 +57,7 @@
         android:layout_marginEnd    = "24dp"
         android:text                = "Nama"
         android:textColor           = "@color/black"
-        app:layout_constraintTop_toBottomOf     = "@+id/editTextEmail"
+        app:layout_constraintTop_toBottomOf     = "@+id/textEmailAccount"
         app:layout_constraintStart_toStartOf    = "parent"
         app:layout_constraintEnd_toEndOf        = "parent" />
     <EditText
